// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifGif renders 1`] = `
<div>
  <div class="rounded shadow text-grey-darker">
    <div class="py-8">
      <h3 class="text-center">How do you pronounce the word <span class="font-light uppercase">gif</span>?</h3>
      <div class="flex justify-center py-8">
        <label for="gif1" class="mx-8">
          GIF
          <input type="radio" id="gif1" value="gif1" name="pronunciation">
        </label>
        <label for="gif2" class="mx-8">
          GIF
          <input type="radio" id="gif2" value="gif2" name="pronunciation">
        </label>
      </div>
    </div>
    <div class="flex justify-center">
      <div class="w-3/4">
        <input id="reason" type="text" placeholder="Why do you think it should be pronounced that way?" class="bg-grey-lighter appearance-none border-2 border-grey-lighter hover:border-purple rounded w-full py-2 px-4 text-grey-darker leading-tight">
      </div>
    </div>
    <div class="flex justify-center my-4">
      <div class="w-3/4">
        <input id="name" type="text" placeholder="What is your name?" class="bg-grey-lighter appearance-none border-2 border-grey-lighter hover:border-purple rounded w-full py-2 px-4 text-grey-darker leading-tight">
      </div>
    </div>
    <div class="flex justify-center">
      <button id="submit" disabled="disabled" class="bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded my-8 opacity-50 cursor-not-allowed">
        Submit
      </button>
    </div>
  </div>
  <div class="py-8">
    <h4 class="text-grey-darker text-center">User Responses:</h4>
  </div>
</div>
`;

exports[`GifGif shows votes loaded from props 1`] = `
<div>
  <div class="rounded shadow text-grey-darker">
    <div class="py-8">
      <h3 class="text-center">How do you pronounce the word <span class="font-light uppercase">gif</span>?</h3>
      <div class="flex justify-center py-8">
        <label for="gif1" class="mx-8">
          GIF
          <input type="radio" id="gif1" value="gif1" name="pronunciation">
        </label>
        <label for="gif2" class="mx-8">
          GIF
          <input type="radio" id="gif2" value="gif2" name="pronunciation">
        </label>
      </div>
    </div>
    <div class="flex justify-center">
      <div class="w-3/4">
        <input id="reason" type="text" placeholder="Why do you think it should be pronounced that way?" class="bg-grey-lighter appearance-none border-2 border-grey-lighter hover:border-purple rounded w-full py-2 px-4 text-grey-darker leading-tight">
      </div>
    </div>
    <div class="flex justify-center my-4">
      <div class="w-3/4">
        <input id="name" type="text" placeholder="What is your name?" class="bg-grey-lighter appearance-none border-2 border-grey-lighter hover:border-purple rounded w-full py-2 px-4 text-grey-darker leading-tight">
      </div>
    </div>
    <div class="flex justify-center">
      <button id="submit" disabled="disabled" class="bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded my-8 opacity-50 cursor-not-allowed">
        Submit
      </button>
    </div>
  </div>
  <div class="py-8">
    <h4 class="text-grey-darker text-center">User Responses:</h4>
    <ul>
      <li class="py-4">
        <p><span class="font-light uppercase">gif</span> — It is not jrafical interchange format</p>
        <p class="text-sm mt-2">Submitted by <span class="uppercase">Matt Stauffer</span> on 2018-07-25</p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`GifGif submits a reason for the pronunciation 1`] = `
<div>
  <div class="rounded shadow text-grey-darker">
    <div class="py-8">
      <h3 class="text-center">How do you pronounce the word <span class="font-light uppercase">gif</span>?</h3>
      <div class="flex justify-center py-8">
        <label for="gif1" class="mx-8">
          GIF
          <input type="radio" id="gif1" value="gif1" name="pronunciation">
        </label>
        <label for="gif2" class="mx-8">
          GIF
          <input type="radio" id="gif2" value="gif2" name="pronunciation">
        </label>
      </div>
    </div>
    <div class="flex justify-center">
      <div class="w-3/4">
        <input id="reason" type="text" placeholder="Why do you think it should be pronounced that way?" class="bg-grey-lighter appearance-none border-2 border-grey-lighter hover:border-purple rounded w-full py-2 px-4 text-grey-darker leading-tight">
      </div>
    </div>
    <div class="flex justify-center my-4">
      <div class="w-3/4">
        <input id="name" type="text" placeholder="What is your name?" class="bg-grey-lighter appearance-none border-2 border-grey-lighter hover:border-purple rounded w-full py-2 px-4 text-grey-darker leading-tight">
      </div>
    </div>
    <div class="flex justify-center">
      <button id="submit" class="bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded my-8 opacity-50 cursor-not-allowed" disabled="disabled">
        Submit
      </button>
    </div>
  </div>
  <div class="py-8">
    <h4 class="text-grey-darker text-center">User Responses:</h4>
    <ul>
      <li class="py-4">
        <p><span class="font-light uppercase">gif</span> — All the cool kids say it that way</p>
        <p class="text-sm mt-2">Submitted by <span class="uppercase">Samantha</span> on 2018-07-25</p>
      </li>
    </ul>
  </div>
</div>
`;
